# Info_search

./: .gitignore  README.md  plot.py  stats.txt  zipf.txt
Link_gatherer/: motorsport_gatherer.js  package.json  the_race_gatherer.js  the_race_urls.json
Search_bot/: bot.js  config.yml  package.json
Search_engine/: CMakeLists.txt  index_builder.cpp  search.cpp  tf-idf_index_builder.cpp  tf-idf_search.cpp  tokenization.cpp
Search_engine/libs/db/: db.cpp  db.hpp
Search_engine/libs/functions/: functions.cpp  functions.hpp
Search_engine/libs/indexer/: indexer.cpp  indexer.hpp
Search_engine/libs/parser/: parser.cpp  parser.hpp
Search_engine/libs/scorer/: scorer.cpp  scorer.hpp
Search_engine/libs/tf-idf_indexer/: tf-idf_indexer.cpp  tf-idf_indexer.hpp
Search_engine/tests/: CMakeLists.txt  test_functions.cpp  test_indexer.cpp  test_parser.cpp  test_scorer.cpp  test_tf-idf_indexer.cpp
